@@ -73,5 +73,16 @@
    <property name="sortreversed">False</property>
   </criterion>
 
+  <criterion name="c5" i18n:attributes="title">
+   <property name="widget">daterange</property>
+   <property name="title">Date</property>
+   <property name="position">top</property>
+   <property name="section">advanced</property>
+   <property name="hidden">False</property>
+   <property name="index">getDate</property>
+   <property name="default"></property>
+   <property name="calYearRange">c-10:c+10</property>
+  </criterion>
+
  </criteria>
 </object>
