@@ -20,6 +20,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Reordered MeetingConfig default fields (fields appearing in first tab)
 - Removed PMInAndOutWidget and replace it by an override of at_utils.translate for MeetingConfig.  Values are
   displayed one by line instead on one line separated by commas
+- Add 'Date' date range filter on faceted dashboards displaying meetings
 
 4.1b13 (2018-12-04)
 -------------------
